fix: Adjust font sizes in editSpacing and editTitle classes; refine layout spacing in ManyComponent

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -108,10 +108,10 @@ input[type="checkbox"] {
 .editSpacing {
   padding: 0;
   margin: 0;
-  font-size: 8px;
+  font-size: 6px;
 }
 .editTitle {
-  font-size: 10px;
+  font-size: 8px;
   margin: 0;
   padding: 2px;
 }
